--- a/deployments/installation.yaml
+++ b/deployments/installation.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sample-app
+  namespace: app1
 spec:
   replicas: 2
   selector:
@@ -24,6 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sample-app-service
+  namespace: app1
 spec:
   selector:
     app: sample-app
