--- a/.github/workflows/imagePublish.yaml
+++ b/.github/workflows/imagePublish.yaml
@@ -1,8 +1,8 @@
 name: Build and Push Docker Image
 
 on:
-  push:
-    branches: [ main ]
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -26,6 +26,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/sample-app:latest
-
-
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/sample-app:${{ github.event.release.tag_name }}
