--- a/installation/manifest.yaml
+++ b/installation/manifest.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: django-deployment
+  namespace: django-app
   labels:
     app: django
 spec:
@@ -24,6 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: django-service
+  namespace: django-app
 spec:
   selector:
     app.kubernetes.io/name: django
