--- a/installation/manifest.yaml
+++ b/installation/manifest.yaml
@@ -28,9 +28,8 @@ metadata:
   namespace: django-app
 spec:
   selector:
-    app.kubernetes.io/name: django
+    app: django
   ports:
     - protocol: TCP
-      port: 80
+      port: 8000
       targetPort: 8000
-  type: LoadBalancer
