--- a/.github/workflows/Image-publish.yaml
+++ b/.github/workflows/Image-publish.yaml
@@ -1,10 +1,10 @@
 name: Publish Docker image
 
-on:
-  release:
-    types: [published]
+# on:
+#   release:
+#     types: [published]
 
-# on: [push]
+on: [push]
 
 jobs:
   push_to_registry:
